# alex-1883-gather

./: .env.example  .gitignore  .plan  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
backend/: Cargo.toml
backend/migrations/: 0001_baseline.sql  0002_users_profiles.sql  0003_events_attachments.sql  0004_event_members.sql  0005_invitations_rsvps.sql  0006_invitation_emails.sql  0007_event_activity.sql  0008_event_reminder_deliveries.sql  0009_event_comments_activity_payload.sql
backend/src/: activity.rs  auth.rs  config.rs  db.rs  email.rs  events.rs  invitations.rs  lib.rs  main.rs  profile.rs  reminders.rs  storage.rs  users.rs
backend/src/api/: error.rs  mod.rs  validation.rs
docs/: deployment.md
frontend/: eslint.config.js  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  styles.css
frontend/src/api/: client.ts  errors.ts
frontend/src/auth/: AuthProvider.tsx  context.ts  useAuth.ts
frontend/src/components/: AppShell.tsx  EventCard.tsx
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  EventDetailPage.tsx  EventFormPage.tsx  InvitePage.tsx  ProfilePage.tsx
tests/e2e/: core-flows.spec.ts  error-states.spec.ts
