[package]
name = "alex-1883-gather-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
